--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -1,42 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabela</title>
     <style>
-        table{
+        table {
+            height: 300px;
             width: 300px;
             border-collapse: collapse;
-            font-weight: bolder;
-            border: 5px solid  black;
         }
-        td{
+
+        td {
             border: 1px solid black;
             padding: 8px;
-        }
-        .color{
-            background-color: gray;
+            text-align: center;
+            vertical-align: middle;
         }
     </style>
 </head>
+
 <body>
     <h1>Minha Primeira Tabela</h1>
-    <!--
-        HIERARQUIA DE TABLEAS (simples)
+    <!-- HIERARQUIA DE TABLEAS (simples)
         TABLE = TABELA
             TABLE ROW = linha de tabela
                 TABLE HEADER = cabeçalho de tabela 
-                TABLE DATA = dado de tabela
-    -->
+                TABLE DATA = dado de tabela -->
     <table>
         <tr>
             <td>A1</td>
             <td>B1</td>
             <td>C1</td>
         </tr>
-        <tr class="color">
+        <tr>
             <td>A2</td>
             <td>B2</td>
             <td>C2</td>
@@ -46,11 +45,12 @@
             <td>B3</td>
             <td>C3</td>
         </tr>
-        <tr class="color">
+        <tr>
             <td>A4</td>
             <td>B4</td>
             <td>C4</td>
         </tr>
-    </table>    
+    </table>
 </body>
+
 </html>
