--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -11,11 +11,29 @@
         }
 
         table{
-            width: 300px;
+            width: 400px;
             height: 100px;
             border-collapse: collapse;
+            position: relative;
             
         }
+
+        thead > tr > th{
+            position: sticky;
+            top: -1px;
+            background-color: lightgray;
+        }
+
+        caption{
+            font-size: 1.5em;
+            padding: 5px;
+            background-color: lightgray;
+        }
+
+        tbody > tr:nth-child(2n){
+            background-color: lightgray;
+        }
+
         td, th{
 
             border: 1px solid black;
@@ -31,6 +49,8 @@
         td.num{
             text-align: right;
         }
+
+
     </style>
 </head>
 <body>
@@ -47,13 +67,14 @@
     <table>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;">População</th>
             </tr>
         </thead>
         <tbody>
+            <caption>População por Estado</caption>
             <tr>
-                <td>São Paulo</td>
+                <td >São Paulo</td>
                 <td class="num">45 919 049</td>
             </tr>
             <tr>
@@ -162,7 +183,7 @@
             </tr>
         </tbody>
         <tfoot>
-            <th>Total de população</th>
+            <th scope="row">Total de população</th>
             <td class="num"><strong>213.317.639</strong></td>
         </tfoot>
     </table>
