--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -5,10 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Primeiro iFrame</title>
+    <style>
+        iframe{
+            width: 400px;
+            height: 400px;
+        }
+    </style>
 </head>
 <body>
     <h1>Teste de iframe</h1>
-    <p>Podemos ver o que é um iframe ao lado. <iframe src="https://www.cursoemvideo.com" frameborder="0">  </iframe></p>
-    <p>Podemos ver tambem que existem algumas proteções contra iframe no exemplo do Google: <iframe src="https://www.google.com.br" frameborder="0"></iframe></p>
+    <p>Podemos ver o que é um iframe ao lado. 
+        <iframe src="https://www.cursoemvideo.com" frameborder="0" scrolling="auto"> 
+            <a href="https://www.cursoemvideo.com"></a>
+              
+    </iframe></p>
+    <p>Podemos ver que o GitHub do professor guanabara funciona. 
+
+       <iframe src="https://gustavoguanabara.github.io" frameborder="0" scrolling="no">
+            <a href="https://gustavoguanabara.github.io"></a>
+       </iframe> 
+
+
+    </p>
 </body>
 </html>
