--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -24,7 +24,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure consequatur aperiam impedit, harum, doloremque dolor, cum molestiae qui quam voluptatem placeat porro suscipit expedita reprehenderit asperiores adipisci ab quibusdam quisquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore id quae voluptatem perspiciatis, natus voluptatum! Nesciunt numquam doloremque fugit assumenda expedita. Porro asperiores veniam quo, cum aliquid laudantium? Facilis, fugiat!</p>
 
-    <iframe src="#" id="tela" name="iframe" frameborder="0"></iframe>
+    <iframe src="#" id="tela" name="iframe" srcdoc="<h1>Escolha umas das opções acimas<h1/>" frameborder="0"></iframe>
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt quo ipsam explicabo dolorem velit exercitationem tempore ipsum et quis? Recusandae delectus atque praesentium fugit nihil sit suscipit ipsa libero laudantium!</p>
 </body>
